# Rust-SWE-Bench

./: README.md
Rust-bench/: .gitattributes  .gitignore  setup.py
Rust-bench/swebench/collect/: build_dataset.py  get_tasks_pipeline.py  (+4 more)
RustForger/config/: runtime_settings.json
RustForger/rustforger-tracer/: .gitignore  Cargo.toml  README.md
RustForger/rustforger-tracer/trace_cli/: Cargo.toml
RustForger/rustforger-tracer/trace_cli/src/: lib.rs  main.rs  trace_config.rs
RustForger/rustforger-tracer/trace_cli/src/commands/: clean.rs  instrument.rs  list_traced.rs  mod.rs  revert.rs  run_flow.rs  setup.rs
RustForger/rustforger-tracer/trace_cli/src/utils/: cargo.rs  config.rs  fs.rs  main_rs.rs  mod.rs  trace_display.rs
RustForger/rustforger-tracer/trace_cli/tests/: instrument.rs  integration.rs  list_traced.rs  revert.rs  setup.rs
RustForger/rustforger-tracer/trace_cli/tests/common/: mod.rs
RustForger/rustforger-tracer/trace_common/: Cargo.toml
RustForger/rustforger-tracer/trace_common/src/: lib.rs
RustForger/rustforger-tracer/trace_common/tests/: integration_tests.rs
RustForger/rustforger-tracer/trace_macro/: Cargo.toml
RustForger/rustforger-tracer/trace_macro/src/: lib.rs
RustForger/rustforger-tracer/trace_runtime/: Cargo.toml
RustForger/rustforger-tracer/trace_runtime/src/: lib.rs
RustForger/src/: agent_api.py  agent_prompt.py  agent_query_llm.py  context_manager.py  docker_handler.py  patch_extracter.py  runtime_config.py  rustforger_main_tracing.py
baselines/SWE-agent/: README.md  environment.yml  multirun.py  multirun.sh  requirements.txt  serialrun.sh
baselines/agentLess/: .gitignore  README.md
baselines/auto-code-rover/: .gitignore  .gitmodules  README.md  build.py  run_acr.sh
baselines/auto-code-rover/rust_parser/: Cargo.toml
baselines/auto-code-rover/rust_parser/src/: lib.rs
baselines/openHands/: .gitignore
eval_reports/: agentless_claude.json  agentless_gpt4o.json  agentless_o4mini.json  agentless_qwen.json  autocoderover_claude.json  autocoderover_gpt4o.json  autocoderover_o4mini.json  autocoderover_qwen.json  openhands_claude.json  openhands_gpt4o.json  openhands_o4mini.json  openhands_qwen.json  rustforger.final-claude-500.json  rustforger.final-gpt4o-500.json  rustforger.final-o4mini-500.json  rustforger.final-qwen3-500.json  sweagent_claude.json  sweagent_gpt4o.json  sweagent_o4mini.json  sweagent_qwen.json
material/: RustAgent_clap-rs__clap-2587.traj  RustAgent_clap-rs__clap-2609.traj  instances.xlsx  openhands_correct_patch.xlsx  rustforger_correct_patch.xlsx
patch/: agentless_claude.jsonl  agentless_gpt4o.jsonl  agentless_o4mini.jsonl  agentless_qwen.jsonl  autocoderover_claude.jsonl  autocoderover_gpt4o.jsonl  autocoderover_o4mini.jsonl  autocoderover_qwen.jsonl  openhands_claude.jsonl  openhands_gpt4o.jsonl  openhands_o4mini.jsonl  openhands_qwen.jsonl  rustforger-claude.jsonl  rustforger-gpt4o.jsonl  rustforger-o4mini.jsonl  rustforger-qwen3.jsonl  sweagent_claude.jsonl  sweagent_o4mini.jsonl  sweagent_qwen.jsonl
reproduce/reproduction-replay/: README.md  replay.sh  requirements.txt
(+370 files in other folders)
