[workspace]
members = ["trace_common", "trace_macro", "trace_runtime", "trace_cli"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
lazy_static = "1.4"
quote = "1.0"
proc-macro2 = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits"] }
tracing = "0.1"
tracing-attributes = "0.1"
tracing-subscriber = "0.3"
tokio = { version = "1.0", features = ["full"] }
libc = "0.2"
serial_test = "3.0"
clap = "4.0"
prettyplease = "0.2"
toml_edit = "0.21"
anyhow = "1.0"
