[package]
name = "trace_runtime"
version.workspace = true
edition.workspace = true

[dependencies]
lazy_static.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
tokio.workspace = true
libc = "0.2"
tracing = "0.1"
tracing-subscriber = "0.3"
ctrlc = "3.4"

trace_common = { path = "../trace_common" }
trace_macro = { path = "../trace_macro", optional = true }

[dev-dependencies]
serial_test = "3.0"

[features]
default = ["with_macro"]
with_macro = ["trace_macro"]