[package]
name = "rust_parser"
version = "0.1.0"
edition = "2021"

[dependencies]
pyo3 = { version = "0.24.0", features = ["extension-module"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
syn = { version = "2.0", features = ["full"] }
proc-macro2 = {version = "1.0.94", features = ["span-locations"]}
quote = "1.0.40"

[lib]
name = "rust_parser"
crate-type = ["cdylib"]

[profile.release]
strip = true